[package]
name = "heatmap"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
image = "0.22.3"
quick-xml = "0.17.0"
reqwest = "0.9.22"
simple-error = "0.2.1"
