[package]
name = "heatmap"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = 0

[dependencies]
chrono = "0.4.19"
conv = "0.3.3"
image = "0.24.3"
quick-xml = "0.23.0"
reqwest = "0.11.15"
simple-error = "0.2.3"
structopt = "0.3.26"
tokio = { version = "1.20.1", features = ["rt", "rt-multi-thread", "macros"] }
